added time completed with moment, fixed styling for the time compelted with inline styling on Todo

--- a/todo/src/App.scss
+++ b/todo/src/App.scss
@@ -59,9 +59,14 @@ body {
 
 .completed {
     text-decoration: line-through;
-    color: #092640
+    color: #092640;
 }
 
+// .time-completed {
+//     text-decoration: none;
+//     color: white;
+//     font-size: .5rem;
+// }
 
 
 
